argo/argo-cluster-generation-from-rancher-capi/.chainsaw-test/chainsaw-step-01-apply-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-rancher-cluster-ns
