argo/argo-cluster-generation-from-rancher-capi/.chainsaw-test/secret-generated01.yaml
apiVersion: v1
kind: Secret
metadata:
  name: cluster-sample-cluster
  namespace: argocd
  labels:
    foo: bar
    argocd.argoproj.io/secret-type: cluster
    clusterId: sample-cluster
type: Opaque
data:
  name: "Y2x1c3Rlci1zYW1wbGUtY2x1c3Rlcg=="
  server: "aHR0cHM6Ly8xMjcuMC4wLjE6MTIzNDU="
  config: "ewogICJiZWFyZXJUb2tlbiI6ICJmb28iLAogICJ0bHNDbGllbnRDb25maWciOiB7CiAgICAiaW5zZWN1cmUiOiBmYWxzZSwKICAgICJjYURhdGEiOiAiWW1GeUNnPT0iCiAgfQp9Cg=="
