argo/argo-cluster-generation-from-rancher-capi/.chainsaw-test/chainsaw-step-00-assert-1.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: clusters.provisioning.cattle.io
spec: {}
status:
  acceptedNames:
    kind: Cluster
    listKind: ClusterList
    plural: clusters
    singular: cluster
  storedVersions:
  - v1
